--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,44 @@
+/* GENERAL */
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+header {
+  height: 100px;
+  width: 100%;
+  box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.4);
+  position: fixed;
+  display: flex;
+  background-color: aqua;
+}
+
+/* UTILITIES */
+.container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.wd-20 {
+  width: 20%;
+  background-color: blueviolet;
+}
+
+.wd-60 {
+  width: 60%;
+  background-color: blueviolet;
+}
+
+.border-b {
+  border: 2px solid black;
+}
+
+.pd-0-10 {
+  padding: 0 10px;
+}
+
+.align-center {
+  display: flex;
+  align-items: center;
 }
