--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,28 +6,50 @@
 }
 
 header {
-  height: 100px;
   width: 100%;
+  padding: 30px;
   box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.4);
   position: fixed;
   display: flex;
+  z-index: 1;
   background-color: aqua;
+}
+
+main {
+  padding: 150px 0;
 }
 
 /* UTILITIES */
 .container {
-  width: 1200px;
+  width: 1500px;
   margin: 0 auto;
+}
+
+.card {}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.bg-violet {
+  background-color: blueviolet
 }
 
 .wd-20 {
   width: 20%;
-  background-color: blueviolet;
 }
 
 .wd-60 {
   width: 60%;
-  background-color: blueviolet;
+}
+
+.wd-33 {
+  width: calc(100% / 3);
+}
+
+.h-500 {
+  height: 500px;
 }
 
 .border-b {
