--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,11 +53,26 @@ main img {
 
 .discount {
   position: absolute;
-  padding: 5px 15px;
+  padding: 5px 10px;
   bottom: 50px;
-  left: 0;
   color: white;
   background-color: red;
+}
+
+.eco {
+  position: absolute;
+  padding: 5px 10px;
+  bottom: 50px;
+  color: white;
+  background-color: green;
+}
+
+.left-0 {
+  left: 0;
+}
+
+.left-65 {
+  left: 65px;
 }
 
 .row {
