--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ main {
 footer {
   padding: 30px;
   display: flex;
-  background-color: aqua;
+  background-color: rgb(26, 26, 26);
 }
 
 header div div a {
@@ -43,6 +43,14 @@ main img {
 
 ul {
   list-style: none;
+}
+
+footer div {
+  color: white;
+}
+
+h3 {
+  font-size: 25px;
 }
 
 /* UTILITIES */
@@ -98,6 +106,15 @@ ul {
   text-decoration: line-through;
 }
 
+.heart {
+  position: absolute;
+  padding: 0 15px;
+  top: 10px;
+  right: 0;
+  font-size: 50px;
+  background-color: white;
+}
+
 .left-0 {
   left: 0;
 }
@@ -110,6 +127,10 @@ ul {
 .fa-solid {
   color: white;
   margin-left: 20px;
+}
+
+.fa-brands {
+  margin: 10px;
 }
 
 .bg-violet {
@@ -128,8 +149,12 @@ ul {
   width: calc(100% / 3 - 20px);
 }
 
-.h-50 {
-  height: 500px;
+.mg-bottom-10 {
+  margin-bottom: 10px;
+}
+
+.mg-right-10 {
+  margin-right: 10px;
 }
 
 .size-20 {
@@ -155,4 +180,8 @@ ul {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.block {
+  display: block;
 }
