--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ header div div a {
 header img {
   height: 40px;
   width: 170px;
+  cursor: pointer;
 }
 
 main img {
@@ -117,6 +118,7 @@ h3 {
 
 .heart:hover {
   color: red;
+  cursor: pointer;
 }
 
 .front-image {
@@ -129,10 +131,17 @@ h3 {
 
 .card:hover .front-image {
   display: none;
+  cursor: pointer;
 }
 
 .card:hover .back-image {
   display: block;
+  cursor: pointer;
+}
+
+header a:hover {
+  color: rgb(255, 218, 191);
+  text-decoration: underline;
 }
 
 .left-0 {
@@ -147,10 +156,12 @@ h3 {
 .fa-solid {
   color: white;
   margin-left: 20px;
+  cursor: pointer;
 }
 
 .fa-brands {
   margin: 10px;
+  cursor: pointer;
 }
 
 .wd-20 {
