--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ header {
   padding: 20px;
   box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.4);
   position: fixed;
+  top: 0;
   display: flex;
   z-index: 1;
   background-color: rgb(254, 105, 0);
